# No-MASS

./: .gitignore  .gitmodules  .travis.yml  CNAME  Dockerfile  LICENSE  README.md  SimulationConfig.xml  index.html  params.json
Boost/: Makefile
Configuration/Experiment3/: AppliancesLarge.xml  HeatingPower.csv  SimulationConfig.xml
Configuration/Experiment3/SmallAppliances/: mean_fractional_kitchen.csv  mean_fractional_other.csv  state_probability_computing_hourly.csv  state_probability_kitchen_hourly.csv  state_probability_other.csv
Configuration/Experiment4/: Activity.xml  PVBowler2013_365.csv  PV_single_profile.csv  SimulationConfig.xml  modelDescription.xml  old.idf
Configuration/Experiment4/SmallAppliances/: database_ratedpower_audiovisual.txt  mean_fractional_audiovisual.csv  sum_rated_av.txt  (+4 more)
Configuration/GenevaHouseAllModels/: SimulationConfig.xml  in.idf
Configuration/GenevaOfficeAllModels/: SimulationConfig.xml  in.epw  in.idf  modelDescription.xml
Configuration/HouseAllModels/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/HouseDeterministic/: in.idf
Configuration/HouseLights/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/HouseShade/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/HouseWindows/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/MultiBuilding/: SimulationConfig.xml
Configuration/OfficeAllModels/: SimulationConfig.xml  in.idf  in.idf.old
Configuration/OfficeAllModels1/: SimulationConfig.xml  in.idf
Configuration/OfficeAllModels3/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/OfficeAllModels4/: SimulationConfig.xml  in.idf
Configuration/OfficeDeterministic/: in.idf
Configuration/OfficeLearn/: SimulationConfig.xml  in.idf  in.idf.old  modelDescription.xml
Configuration/OfficeLights/: SimulationConfig.xml  in.idf
Configuration/OfficePresence/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/OfficeShade/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/OfficeWindows/: SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/WinterWeek/: Activity.xml  SimulationConfig.xml  in.idf
Documentation/Doxygen/: Doxyfile
Documentation/HTML/: Footer.html  Header.html
Documentation/Images/: graph.dot
Documentation/Markdown/: ClassDiagram.md  EnergyPlus.md  Examples.md  FMU.md  Implementation.md  ModelDescription.md  SimulationConfig.md  dependencies.md  input.md  mainpage.md  scripts.md
FMU/: .geanyprj  CMakeLists.txt  FMI.cbp  FMI.cbp.mak  FMI.depend  FMI.layout  FMIWin.cbp  FMIWin.depend  FMIWin.layout  makefile
FMU/Source/: Agent.cpp  Agent.h  Agent.hpp  Agent_Action.cpp  Agent_Action.h  Agent_Action_Appliance.cpp  Agent_Action_Appliance.h  Agent_Action_Appliance_BDI.cpp  Agent_Action_Appliance_BDI.h  Agent_Action_Heat_Gains.cpp  Agent_Action_Heat_Gains.h  Agent_Action_Heating.cpp  Agent_Action_Heating.h  Agent_Action_HeatingSetPoints_Learning.cpp  Agent_Action_HeatingSetPoints_Learning.h  Agent_Action_Learning.cpp  Agent_Action_Learning.h  Agent_Action_Lights.cpp  Agent_Action_Lights.h  Agent_Action_Lights_BDI.cpp  Agent_Action_Lights_BDI.h  Agent_Action_Shades.cpp  Agent_Action_Shades.h  Agent_Action_Shades_BDI.cpp  Agent_Action_Shades_BDI.h  Agent_Action_Window.cpp  Agent_Action_Window.h  Agent_Action_Window_Learning.cpp  Agent_Action_Window_Learning.h  Agent_Action_Window_Stochastic.cpp  Agent_Action_Window_Stochastic.h  Agent_Action_Window_Stochastic_BDI.cpp  Agent_Action_Window_Stochastic_BDI.h  Agent_Zone.cpp  Agent_Zone.h  Appliance.cpp  Appliance.h  Appliance.hpp  Appliance_Battery.cpp  Appliance_Battery.h  (+250 more)
FMU/tests/: CMakeLists.txt  tests.cbp  tests.layout
FMU/tests/Files/: Activity.xml  ApplianceUsage.xml  ApplianceUsageold.xml  AppliancesLarge.xml  DSM.xml  DSM.xml.in  DSM10houses.xml  DSM1house.xml  DSM2houses.xml  Learning.xml  SimulationConfig.xml  SimulationConfig1.xml  SimulationConfig1.xml.in  SimulationConfig1a.xml  SimulationConfig2.xml  SimulationConfig3.xml  SimulationConfig4.xml  SimulationConfig5.xml  in.idf  learning.xml  results.xml  test.py
FMU/tests/Files/SmallAppliances/: database_ratedpower_kitchen.txt  database_ratedpower_other.txt  state_probability_audiovisual.csv  sum_rated_kit.txt  weibull_parameters_audiovisual.csv
FMU/tests/source/: Gen.h.in  Gen.hpp.in  unittest_Agent.cc  unittest_Agent_Action.cc  unittest_Agent_Action_Heat_Gains.cc  unittest_Agent_Action_HeatingSetPoints_Learning.cc  unittest_Agent_Action_Learning.cc  unittest_Agent_Action_Light.cc  unittest_Agent_Action_Light_BDI.cc  unittest_Agent_Action_Shades.cc  unittest_Agent_Action_Shades_BDI.cc  unittest_Agent_Action_Window.cc  unittest_Agent_Action_Window_Learning.cc  unittest_Agent_Action_Window_Stochastic.cc  unittest_Agent_Action_Window_Stochastic_BDI.cc  unittest_Agent_Zone.cc  unittest_Appliance_Battery.cc  unittest_Appliance_Battery.cpp  unittest_Appliance_Generic_CSV.cc  unittest_Appliance_Generic_CSV.cpp  unittest_Appliance_Group_Battery.cc  unittest_Appliance_Group_Battery.cpp  unittest_Appliance_Group_CSV.cc  unittest_Appliance_Group_CSV.cpp  unittest_Appliance_Group_Large.cc  unittest_Appliance_Group_Large.cpp  unittest_Appliance_Large.cc  unittest_Appliance_Large.cpp  unittest_Appliance_Large_Learning.cc  unittest_Appliance_Large_Learning.cpp  unittest_Building.cc  unittest_Building.cpp  unittest_Building_Appliances.cc  unittest_Building_Appliances.cpp  unittest_Building_Zone.cc  unittest_Building_Zone.cpp  unittest_Configuration.cpp  unittest_Contract_Negotiation.cc  unittest_Contract_Negotiation.cpp  unittest_Contract_Node_Priority.cc  (+58 more)
Scripts/: EPlocal.py  LearnCollect.py  LearningExample.ipynb  NoMASS.py  NomassDsmPlotLibrary.py  RVlocal.py  Run.py  Run.py~  configuration.py  nomassDRDataAnalysisLibrary.py  repeat.py  repeatLinux.py
Scripts/.ipynb_checkpoints/: experiment5-checkpoint.ipynb
tests/: Makefile
tests/Files/: Activity.xml  SimulationConfig.xml  SimulationConfig1.xml
tests/source/: unittest_Model_Activity.cc  unittest_SimulationConfig.cc
(+4 files in other folders)
